--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -14,8 +14,10 @@
       <%= link_to (image_tag mymenu.image), mymenu %>
     </div>
     <% end %>
-    <br>
-    <%= link_to "Add Menu", new_menu_path %>
+    <br><br>
+
+    <%= link_to "Add Menu", new_menu_path, :class => "linkButton" %>
+    <br><br>
     <hr>
     <h2>All Menus</h2>
     <% end %>
