--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,53 +1,50 @@
-
 <div class="main">
 
-<p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice %></p>
 
-<div class="menuShow">
-  <h1><%= @menu.title %></h1>
-<hr>
-  <div class="menuShowImage">
-    <%= image_tag @menu.image, :class => 'menuImage' %>
+  <div class="menuShow">
+    <h1><%= @menu.title %></h1>
+    <hr>
+    <div class="menuShowImage">
+      <%= image_tag @menu.image, :class => 'menuImage' %>
+    </div>
+
+    <div class="menuShowText">
+
+      <h3>Description:</h3>
+      <p><%= @menu.description %></p>
+
+      <h3>Chef:</h3>
+      <p><%= link_to @menu.user.first_name, user_path(@menu.user)%></p>
+
+      <h3>Cuisine:</h3>
+      <p><%= @menu.cuisine %></p>
+
+      <h3>Price Per Person:</h3>
+      <p><%= number_to_currency(@menu.pricePP) %></p>
+
+      <h3>Dietry:</h3>
+      <p><%= @menu.dietry %></p>
+
+      <% if @menu.gluten_free.present? %>
+      <h3>Gluten free</h3>
+      <% end %>
+
+      <% if @menu.vego.present? %>
+      <h3>Vego</h3>
+      <% end %>
+      <hr>
+      <%= link_to ('Book this Menu'), new_event_path, :class => 'linkButton' %>
+
+    </div>
+
+    <hr>
+    <% if @current_user.present? && (@current_user.id == @menu.user.id) %>
+    <%= link_to 'Destroy', @menu, method: :delete, data: { confirm: 'Are you sure?' } %>
+    |
+    <%= link_to 'Edit', edit_menu_path(@menu) %>
+    |
+    <%= link_to 'Back', menus_path %>
+    <% end %>
   </div>
-
-  <div class="menuShowText">
-
-  <h3>Description:</h3>
-  <p><%= @menu.description %></p>
-
-  <h3>Chef:</h3>
-  <p><%= link_to @menu.user.first_name, user_path(@menu.user)%></p>
-
-  <h3>Cuisine:</h3>
-  <p><%= @menu.cuisine %></p>
-
-  <h3>Price Per Person:</h3>
-  <p><%= number_to_currency(@menu.pricePP) %></p>
-
-  <h3>Dietry:</h3>
-  <p><%= @menu.dietry %></p>
-
-<% if @menu.gluten_free.present? %>
-  <h3>Gluten free</h3>
-<% end %>
-
-<% if @menu.vego.present? %>
-  <h3>Vego</h3>
-<% end %>
-<hr>
-<%= link_to ('Book this Menu'), new_event_path, :class => 'linkButton' %>
-
-
-</div>
-
-
-
-
-<hr>
-<% if @current_user.present? && (@current_user.id == @menu.user.id) %>
-<%= link_to 'Destroy', @menu, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Edit', edit_menu_path(@menu) %> |
-<%= link_to 'Back', menus_path %>
-<% end %>
-</div>
 </div>
