--- a/app/assets/stylesheets/chefs.scss
+++ b/app/assets/stylesheets/chefs.scss
@@ -4,21 +4,25 @@
 
 
 .usersViewIcon {
+  // box-sizing: border-box;
   border-radius: 5px;
-  width: 23%;
-  float: left;
-  margin: 0 2% 0 16%;
-  padding: 3% 0 4% 3%;
+  // margin: 20px;
+  padding: 20px;
   background-color: gainsboro;
+  margin: 2% 0.5% 2% 0.5%;
+}
 
+.usersViewIcon h2 {
+  margin-left: 0;
 }
 
 .userInfo {
-  width: 45%;
-  float: left;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-top: 20px;
   background-color: #beeeef;
-  padding: 3%;
   border-radius: 5px;
+  margin: 2% 0.5% 2% 0.5%;
 }
 .return {
   display: block;
