--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,3 +1,8 @@
+// *{
+//   box-sizing: border-box;
+// }
+
+
 body {
   background-color: #fff;
   color: #333;
@@ -93,7 +98,9 @@ div {
 
 
 .main{
-  padding: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   margin: 0 auto;
 }
 
