--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 <div class="main cf">
 
   <p id="notice"><%= notice %></p>
-
   <% if @current_user == @user %>
   <h1>Hello <%= @user.first_name %></h1>
   <% end %>
@@ -15,23 +14,24 @@
     </div>
 
     <div class="userInfo col col-lg-6 col-md-6 col-sm-12 cf">
-      <div class="userInfoPadding">
         <p>
           <strong>Email:</strong>
           <%= @user.email %>
         </p>
 
       <% #only show the admin status if the current user is an admin %>
-      <% if @current_user.admin? %>
-        <% if @user.admin? %>
-        <p>
-          <strong>Admin: </strong><%= @user.first_name %> is also an admin
-          <%= @user.admin %>
-        </p>
-        <% end %>
-        <p>
-          <strong>Admin: </strong> <%= @user.first_name %> is not an admin
-        </p>
+      <% if @current_user.present? %>
+        <% if @current_user.admin? %>
+          <% if @user.admin? %>
+          <p>
+            <strong>Admin: </strong><%= @user.first_name %> is also an admin
+            <%= @user.admin %>
+          </p>
+            <% end %>
+          <p>
+            <strong>Admin: </strong> <%= @user.first_name %> is not an admin
+          </p>
+          <% end %>
         <% end %>
 
         <% #only show the phone number if @user is a chef or current user is admin %>
@@ -73,13 +73,15 @@
         <% end %>
         <br>
           <div class="return">
+          <% if @current_user.present? %>
+
             <% #only show the edit button if the current user is @user or admin %>
             <% if @current_user.admin? || @current_user.id === @user.id %>
               <%= link_to 'Edit', edit_user_path(@user) %> |
             <% end %>
+          <% end %>
             <%= link_to 'Back', users_path %>
           </div>
         </div>
-      </div>
   </div>
 </div>
