--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -43,14 +43,15 @@
   <%= f.label :guests %><br>
   <%= f.number_field :guests%>
 </div>
-<div class="field">
+<div class="field" id="chefConfirm">
   <%= f.label :confirm %><br>
   <%= f.check_box :confirm %>
 </div>
-<div class="field">
-  <%= f.label :price %><br>
-  <%= f.text_field :price %>
+<button id="calculatePrice">Show Price</button>
+<br><br>
+<div id="priceField">
 </div>
+
 <div class="actions">
   <%= f.submit %>
 </div>
