--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -14,3 +14,17 @@
 #chefConfirm{
   display: none;
 }
+
+@media (min-width: 768px) {
+  .container {
+     width: 100%;
+  }
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0;
+  max-width: 100%;
+
+}
