--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -34,6 +34,10 @@ td{
   display: inline-block;
 }
 
+tr {
+  display: inline-block;
+}
+
 input[type=search] {
 	color: black;
 	text-align: center;
