--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,6 @@
+<div class="main">
+
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Messages</h1>
@@ -33,3 +36,4 @@
 <br>
 
 <%= link_to 'New Message', new_message_path %>
+</div>
