--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -43,7 +43,7 @@
   </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.text_area :image %>
+    <%= f.file_field :image %>
   </div>
   <div class="actions">
     <%= f.submit %>
