events new page

--- a/app/assets/stylesheets/chefs.scss
+++ b/app/assets/stylesheets/chefs.scss
@@ -23,6 +23,7 @@
   background-color: #beeeef;
   border-radius: 5px;
   margin: 2% 0.5% 2% 0.5%;
+  text-align: left;
 }
 .return {
   display: block;
