--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     <br><br>
 
-    <%= link_to "Add Menu", new_menu_path, :class => "linkButton" %>
+    <%= link_to "Add Menu", new_menu_path, :class => "btn btn-default" %>
     <br><br>
     <hr>
     <h2>All Menus</h2>
