--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,16 @@
+<div class="background2">
+</div>
+
+
 <div class="main">
   <p id="notice"><%= notice %></p>
 
-<h1>Listing Events</h1>
-    <% @current_user.events.each do |event| %>
-        <li><%= link_to event.description, event %></li>
-    <% end %>
-
-<br>
-
-<%= link_to 'New Event', new_event_path, :class => 'linkButton' %>
+  <h1>My Events</h1>
+  <div class="events">
+      <% @current_user.events.each do |event| %>
+  <li><%= link_to event.description, event %></li>
+  <% end %>
+<br><br>
+<%= link_to 'New Event', new_event_path, :class => "btn btn-default" %>
+  </div>
 </div>
