--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -53,6 +53,7 @@ input[type=search] {
   margin-right: 60px;
   vertical-align: center;
   max-width: 100%;
+  box-shadow: 2px 4px 10px black;
 
 }
 
