--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -15,19 +15,19 @@
 
   <div class="field">
     <%= f.label :cuisine %><br>
-    <%= f.text_field :cuisine %>
+    <%= f.text_field :cuisine, :required => true  %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :required => true  %>
   </div>
   <div class="field">
     <%= f.label :pricePP %><br>
-    <%= f.text_field :pricePP %>
+    <%= f.number_field :pricePP, :required => true  %>
   </div>
   <div class="field">
     <%= f.label :dietry %><br>
-    <%= f.text_area :dietry %>
+    <%= f.text_area :dietry, :required => true  %>
   </div>
   <div class="field">
     <%= f.label :gluten_free %><br>
@@ -39,7 +39,7 @@
   </div>
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :required => true  %>
   </div>
   <div class="field">
     <%= f.label :image %><br>
