--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -14,7 +14,8 @@
 .thumb img{
   width: 150px;
   height: 150px;
-  border: 4px solid gainsboro;
+  border: 4px solid #BEEEEF;
+  border-radius: 5%;
 }
 
 .menu{
