--- a/app/views/chefs/display.html.erb
+++ b/app/views/chefs/display.html.erb
@@ -4,7 +4,7 @@
   <div class="displayChefs">
       <div class="thumb">
       <%=link_to (image_tag user.image), user %>
-      <%= link_to (user.first_name), user%>
+      <h2><%= link_to (user.first_name), user%>
     </div>
   </div>
 
