--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -33,9 +33,10 @@
       <% if @menu.vego.present? %>
       <h3>Vego</h3>
       <% end %>
+      <% if @current_user.id != @menu.user.id %>
       <hr>
       <%= link_to ('Book this Menu'), new_event_path, :class => 'linkButton' %>
-
+      <% end %>
     </div>
 
     <hr>
