message creation working

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,26 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :target %><br>
-    <%= f.number_field :target %>
+    <%= f.label :target, "Who do you want to message?" %><br>
+    <%= f.select :target, @users.pluck(:first_name, :id), {:prompt => 'Who do you want to message?'}, :id => 'message-target' %>
   </div>
   <div class="field">
     <%= f.label :message %><br>
-    <%= f.text_area :message %>
-  </div>
-  <div class="field">
-    <%= f.label :seen %><br>
-    <%= f.check_box :seen %>
-  </div>
-  <div class="field">
-    <%= f.label :archive %><br>
-    <%= f.check_box :archive %>
+    <%= f.text_area :message, :id => 'message-content' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :id => 'create-message' %>
   </div>
 <% end %>
