--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,37 +2,36 @@
 
 <p id="notice"><%= notice %>
 
+
   <h2><%= @event.description %></h2>
+<hr>
 
+<div class="eventDescription">
+  <h5>Where?</h5>
+  <h5>When?</h5>
+  <h5>Chef?</h5>
+  <h5>Menu?</h5>
+  <h5>Guests?</h5>
+  <h5>Confirm?</h5>
+  <h5>Price?</h5>
+</div>
 
-  <h4>Time:</h4>
-  <li><%= @event.time %></li>
+<div class="eventResults">
+  <h5><%= @event.address %> <%= " - " + @event.suburb %></h5>
+  <h5><%= @event.time %></h5>
+  <h5><%= link_to @event.chef.first_name, user_path(@event.chef_id) %></h5>
+  <h5><%= link_to @event.menu.title, menu_path(@event.menu_id) %></h5>
+  <h5><%= @event.guests %></h5>
+  <h5><% if @event.confirm === false %></h5>
+  <h5><%= "Waiting for Chef"%></h5>
+  <h5><% else %>
+  <h5><%= "Good to go" %></h5>
+  <h5><% end %>
+  <h5><%= number_to_currency(@event.price) %></h5>
+</div>
 
-  <h4>Suburb:</h4>
-  <li><%= @event.suburb %></li>
-
-  <h4>Address:</h4>
-  <li><%= @event.address %></li>
-
-<% if @event.chef_id.present? %>
-  <h4>Chef:</h4>
-  <li><%= link_to @event.chef.first_name, user_path(@event.chef_id) %></li>
-<% end %>
-  <h4>Menu:</h4>
-  <li><%= link_to @event.menu.title, menu_path(@event.menu_id) %></li>
-
-  <h4>Guests:</h4>
-  <li><%= @event.guests %></li>
-
-  <h4>Confirm:</h4>
-  <li><%= @event.confirm %></li>
-
-  <h4>Price:</h4>
-  <li><%= number_to_currency(@event.price) %></li>
-
-
-  <hr>
-<%= link_to 'Remove Event', @event, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<hr>
+<%= link_to 'Delete', @event, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
 </div>
