--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -33,7 +33,7 @@
       <% if @menu.vego.present? %>
       <h3>Vego</h3>
       <% end %>
-      <% if @current_user.id != @menu.user.id %>
+      <% if @current_user.present? && @current_user.id != @menu.user.id %>
       <hr>
       <%= link_to ('Book this Menu'), new_event_path, :class => 'linkButton' %>
       <% end %>
