--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
           <% @user.menus.each do |menu| %>
             <li><%= link_to menu.title, menu %></li>
           <% end %>
-          <% if @user === @current_user || @current_user.admin? %>
+          <% if @current_user.present? && (@current_user.id === @user.id) %>
             <%= link_to 'Add Menu', new_menu_path %>
           <% end %>
         <% end %>
