--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -97,7 +97,7 @@
           <br> 1 = Bad Cooking, 10 = Masterchef!!</div>
           <fieldset class="label reviewRating">
             <h4><%= f.label :rating %> </h4>
-            <%= f.number_field :rating %>
+            <%= f.number_field :rating, :min => 1, :max => 10 %>
           </fieldset>
 
           <fieldset class="label reviewComments" >
@@ -118,6 +118,7 @@
           <br>
           <div class="light-orange">
           Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
+          <%= link_to 'Destroy', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
           </div>
         </div>
       <% end %>
