--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -125,4 +125,10 @@
 
     </div>
   </div>
+  <div class="row">
+    <h1>Messages!</h1>
+    <div class="col-lg-2 col-md-2"></div>
+    <div id="messages" class="row col-lg-8 col-md-8 cold-sm-12"></div>
+  </div>
+
 </div>
