--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,3 +13,42 @@ tr {
   // background-color: #beeeef;
   margin-bottom: 10px;
 }
+
+.profileImage{
+  display: inline-block;
+  max-width: 20%;
+  vertical-align: center;
+}
+
+.profileImage img{
+  display: inline-block;
+  max-height: 300px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 10px black;
+}
+
+.profileInfo{
+  display: inline-block;
+  max-width: 60%;
+  text-align: left;
+  vertical-align: bottom;
+  margin-left: 150px
+}
+
+.usersProfile {
+    color: black;
+    background-color: gainsboro;
+    max-width: 10000px;
+    padding: 30px;
+}
+
+.usersProfile h3{
+  text-align: center;
+  text-shadow: 2px 2px 2px white;
+
+}
+
+.reviewsShow{
+  background: white;
+  padding: 30px;
+}
