--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -10,12 +10,14 @@
     <% if @current_user.present? && (@current_user.chef? || @current_user.admin?) %>
     <h2>My Menus</h2>
     <% @current_user.menus.each do |mymenu| %>
+    <div class="displayChefs">
     <div class="thumb">
       <%= link_to (image_tag mymenu.image), mymenu %>
     </div>
+  </div>
+
     <% end %>
     <br><br>
-
     <%= link_to "Add Menu", new_menu_path, :class => "btn btn-default" %>
     <br><br>
     <hr>
