--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,103 +1,128 @@
-<br><br><br>
+<div class="main cf">
   <p id="notice"><%= notice %></p>
-
   <% if @current_user == @user %>
-    <h1>Hello <%= @user.first_name %></h1>
-  <% else %>
-    <h1><%= @user.first_name %> <%= @user.last_name %></h1>
+  <h1>Hello <%= @user.first_name %></h1>
   <% end %>
-<br>
-<div class="usersProfile">
-  <% if @user.chef? && @user.bio.present? %>
-  <h3><%= "'" + @user.bio + "'" %></h3>
-  <% end %>
-  <br><br>
-    <div class="profileImage">
-    <%= image_tag @user.image%>
+  <div class="row">
+    <div class="col-lg-2 col-md-1 cold-sm-0"></div>
+    <div class="usersViewIcon col col-lg-3 col-md-3 cold-sm-12 cf">
+      <h2>
+        <%= @user.first_name %> <br> <%= @user.last_name %>
+      </h2>
+      <%= image_tag @user.image, :class => "thumb cf"%>
+    </div>
+    <div class="userInfo col col-lg-6 col-md-6 col-sm-12 cf">
+      <h2>Contact <%= @user.first_name %></h2>
+        <p>
+          <strong>Email:</strong>
+          <%= @user.email %>
+        </p>
+      <% #only show the admin status if the current user is an admin %>
+      <% if @current_user.present? %>
+        <% if @current_user.admin? %>
+          <% if @user.admin? %>
+          <p>
+            <strong>Admin: </strong><%= @user.first_name %> is also an admin
+            <%= @user.admin %>
+          </p>
+            <% end %>
+          <p>
+            <strong>Admin: </strong> <%= @user.first_name %> is not an admin
+          </p>
+          <% end %>
+        <% end %>
+        <% #only show the phone number if @user is a chef or current user is admin %>
+        <% if @user.chef? || @current_user.admin? %>
+          <p>
+            <strong>Phone:</strong>
+            <%= @user.phone %>
+          </p>
+        <% end %>
+        <% #show host or chef depending on @user.chef status %>
+        <% if @user.chef? %>
+          <p>
+            <strong>User type: </strong>
+            Chef
+          </p>
+        <% elsif !@user.chef? %>
+          <p>
+            <strong>User type: </strong>
+            Host
+          </p>
+        <% end %>
+        <% #only show the chef bio, rate, and menus if they are a chef %>
+        <% if @user.chef? %>
+          <p>
+            <strong>Bio:</strong>
+            <%= @user.bio %>
+          </p>
+          <p>
+            <strong>Rate:</strong>
+            <%= @user.rate %> $ per hour
+          </p>
+          <strong>Menus:</strong>
+          <% @user.menus.each do |menu| %>
+            <li><%= link_to menu.title, menu %></li>
+          <% end %>
+          <% if @user === @current_user || @current_user.admin? %>
+            <%= link_to 'Add Menu', new_menu_path %>
+          <% end %>
+        <% end %>
+        <br>
+          <div class="return">
+          <% if @current_user.present? %>
+            <% #only show the edit button if the current user is @user or admin %>
+            <% if @current_user.admin? || @current_user.id === @user.id %>
+              <%= link_to 'Edit', edit_user_path(@user) %> |
+            <% end %>
+          <% end %>
+            <%= link_to 'Back', users_path %>
+          </div>
+        </div>
   </div>
-
-  <div class="profileInfo">
-
-    <% #show host or chef depending on @user.chef status %>
-    <% if @user.chef? %>
-      <h3> Chef <%= @user.last_name %> </h3>
-    <% elsif !@user.chef? %></p>
-      <p><strong> Host </strong>
-    <% end %>
-
-    <p><strong>Email:</strong> <%= @user.email %> </p>
-
-    <% #only show the admin status if the current user is an admin %>
-    <% if @current_user.present? && @current_user.admin? %>
-      <p><strong> User is Admin </strong></p>
-    <% end %>
-
-    <% #only show the phone number if @user is a chef or current user is admin %>
-    <% if @user.chef? || @current_user.admin? %>
-      <p><strong>Phone:</strong> <%= @user.phone %></p>
-    <% end %>
-
-    <% #only show the chef bio, rate, and menus if they are a chef %>
-    <% if @user.chef? %>
-    <p><strong>Rate per hour :</strong><%= number_to_currency(@user.rate) %></p>
-    <strong>Menus:</strong>
-    <% @user.menus.each do |menu| %>
-      <li><%= link_to menu.title, menu %></li>
-    <% end %>
-    <% end %>
-  </div>
-    <div class="return">
-      <% if @current_user.present? && (@current_user.admin? || @current_user.id === @user.id) %>
-        <%= link_to 'Edit', edit_user_path(@user), :class => "btn btn-default" %>
-        <%= link_to 'Add Menu', new_menu_path, :class => "btn btn-default" %>
+  <div class="row">
+    <div class="col-lg-2 col-md-2"></div>
+    <div class="reviewsContainer row col-lg-8 col-md-8 cold-sm-12">
+      <h2><%= @user.first_name %>'s Reviews</h2>
+      <h4>Create a new review for <%= @user.first_name %> </h4>
+      <div class="chefReviews">
+        <%= form_for ([@user, Review.new]), remote: true, html: {multipart: true} do |f| %>
+        <div><strong>Ratings from 1 - 10:</strong>
+          <br> 1 = Bad Cooking, 10 = Masterchef!!</div>
+          <fieldset class="label reviewRating">
+            <h4><%= f.label :rating %> </h4>
+            <%= f.number_field :rating, :min => 1, :max => 10 %>
+          </fieldset>
+          <fieldset class="label reviewComments" >
+            <h4><%= f.label :comments %></h4>
+            <%= f.text_area :review, size: "60x12" %>
+          </fieldset>
+          <fieldset id="submitReview">
+            <%= f.submit %>
+          </fieldset>
+        <% end %>
+      </div>
+      <h2 id="prevReviews">Previous Reviews</h2>
+      <% @user.reviews.reverse.each do |review| %>
+        <div class="individual_reviews">
+          <span class="rating"><%= review.rating %> / 10 :</span>
+          <span class="review_comments"><%= review.review %></span>
+          <br>
+          <br>
+          <div class="light-orange">
+          Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
+          <%= link_to 'Destroy', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+          </div>
+        </div>
       <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <h1>Messages!</h1>
+    <div class="col-lg-2 col-md-2"></div>
+    <div id="messages" class="row col-lg-8 col-md-8 cold-sm-12"></div>
   </div>
 </div>
-
-
-<div class="reviewsShow">
-
-  <h2><%= @user.first_name %>'s Reviews</h2>
-  <h4>Create a new review for <%= @user.first_name %></h4>
-
-  <div class="chefReviews">
-    <%= form_for ([@user, Review.new]), html: {multipart: true} do |f| %>
-  <div>
-    <strong>Ratings from 1 - 10:</strong>
-      <br>
-      <p>1 = Bad Cooking, 10 = Masterchef!!<p>
-  </div>
-
-    <fieldset class="label reviewRating">
-      <h4><%= f.label :rating %></h4>
-      <%= f.number_field :rating %>
-    </fieldset>
-
-    <fieldset class="label reviewComments">
-      <h4><%= f.label :comments %></h4>
-      <%= f.text_area :review, size: "60x12" %>
-    </fieldset>
-
-    <fieldset id="submitReview">
-      <%= f.submit %>
-    </fieldset>
-    <% end %>
-  </div>
-
-
-  <h2 id="prevReviews">Previous Reviews</h2>
-  <% @user.reviews.reverse.each do |review| %>
-    <div class="individual_reviews">
-      <span class="rating"><%= review.rating %> / 10 :</span>
-      <span class="review_comments"><%= review.review %></span>
-      <br>
-      <br>
-      <div class="light-orange">
-      Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
-      <%= link_to 'Destroy', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
-      </div>
-    </div>
-<% end %>
 
   <div class="row">
     <h1>Messages!</h1>
