--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,7 +6,9 @@
 
 <div class="row">
   <div class="col-lg-2 col-md-2"></div>
-  <div id="messages" class="col-lg-8 col-sm-12"></div>
+  <div id="messages" class="col-lg-8 col-sm-12">
+    <div id="conversations"></div>
+  </div>
 
 </div>
 
