--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -32,7 +32,7 @@
   box-shadow: 3px 5px 10px grey;
   min-width: 300px;
   max-width: 50%;
-  text-align: center
+  text-align: left;
 }
 
 .events a{
@@ -42,6 +42,7 @@
 .events li {
   text-align: left;
   margin-bottom: 20px;
+  margin-left: 30px;
 }
 
 h5{
